# minimap

./: .gitignore  .gitmodules  README.md  TODO.md
artifacts/: README.md  lora time on air results.txt  peripheral_pins.md  toa.py
artifacts/minimap-pcb-v1/: fp-info-cache  fp-lib-table  minimap-pcb-v1.kicad_pcb  minimap-pcb-v1.kicad_prl  minimap-pcb-v1.kicad_pro  minimap-pcb-v1.kicad_sch  sym-lib-table  ~_autosave-minimap-pcb-v1.kicad_pcb.lck
artifacts/minimap-pcb-v1/LocalLib/: minimap_custom_symbols(2).bak  (+2 more)
esp32-prototype/: DETAILS.md  DEVELOPING.md  pinout.md
esp32-prototype/blink/: sdkconfig
esp32-prototype/esp-mpu9250/: README.md
esp32-prototype/hardware_integration/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp32-prototype/imu-component/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp32-prototype/imu_irq_in_progress/: README.md  sdkconfig
esp32-prototype/imu_serial/: CMakeLists.txt  README.md
esp32-prototype/lcd/: sdkconfig
esp32-prototype/lora-library/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp32-prototype/nmea0183_parser/: README.md  sdkconfig  sdkconfig.defaults
esp32-prototype/screen_component/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32-prototype/screen_imu_gps/: README.md  sdkconfig  sdkconfig.defaults
esp32-prototype/simple_gps/: CMakeLists.txt  sdkconfig.defaults
esp32-prototype/simple_radiolib/: CMakeLists.txt  sdkconfig
esp32-prototype/spi_lcd_touch/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp32-prototype/testing/: CMakeLists.txt  sdkconfig.old
hardware_artifacts/: peripheral_pins.md
misc/: luca_notes.md
pico-prototype/: CMakeLists.txt  DEVELOPMENT.md  flake.nix  shell.nix
pico-prototype/luca_notes/: project.md
pico-prototype/programs/blink/: CMakeLists.txt
pico-prototype/programs/hello_usb/: CMakeLists.txt
(+111 files in other folders)
